--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -14,9 +14,10 @@
     opacity: 0;
     background: var(--color-primary);
     bottom: 0;
+    z-index: 10;
 
     &:hover {
-      opacity: 1;
+      opacity: 1 !important;
     }
   }
 
